--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "deploy:cf": "npm run build && npx wrangler pages deploy dist"
   },
   "dependencies": {
+    "dexie": "^4.3.0",
+    "lucide-react": "^0.460.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "lucide-react": "^0.460.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
